# TASTE-task-synthesis-from-tool-sequence-evolution

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/domains/airline/: domain.json  tasks.json  tool_spec.json
artifacts/domains/retail/: domain.json  tool_spec.json
artifacts/domains/telecom/: domain.json  tool_spec.json
artifacts/prompts/stage2/: validate_action_sequence.txt
artifacts/prompts/stage3/: adversarial_scenario.txt  adversarial_scenario_lite.txt  adversarial_strategy.txt  create_user_task.txt  db_trap_construction.txt  generate_db_initialization.txt  partial_coverage_gt_agent.txt  patch_db.txt  patch_task.txt  task_coherence_review.txt
artifacts/task_sets/airline_gpt_5_2/: tasks.json
artifacts/validated_clusters/: airline_medoids.json  airline_medoids_no_wed.json  retail_medoids.json  telecom_medoids.json  telecom_medoids_write_only.json
src/: __init__.py
src/common/: __init__.py  call_to_llm.py  domain_config.py  domain_utils.py  flight_ambiguity_checker.py  llm_response_parser.py  prompt_manager.py  tool_spec_retriever.py
src/stage1_ngram/: __init__.py  initialize_ngram_model.py
src/stage2_cluster/: __init__.py  action_sequence_validator.py  cluster_and_validate.py  medoid_validation.py
src/stage3_tasks/: __init__.py  action_sequence_policy.py  adversarial_evolver.py  database_state_manager.py  env_assertion_synthesizer.py  evolve_tasks.py  generate_tasks.py  partial_coverage_gt_agent.py  scenario_aligner.py  task_builder.py  task_generation.py  task_set.py  task_validator.py  task_validator_logging.py  validation_with_retry.py
(+36 files in other folders)
